--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ body {
 
 .list {
     list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .link {
@@ -47,11 +49,13 @@ body {
     color: var(--title-text-color);
     font-weight: 700;
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 .invisible {
     opacity: 0;
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 
@@ -129,6 +133,7 @@ body {
     color: var(--secondary-accent-color);
     text-transform: uppercase; 
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 .hero .button {
@@ -142,6 +147,8 @@ body {
     line-height: 1.88;
     letter-spacing: 0.06em;
     padding: 10px 32px;
+    min-width: 216px;
+    text-align: center;
     border: 0;
     cursor: pointer;
  }
@@ -163,6 +170,8 @@ body {
 
 .characteristic .point {
     line-height: 1.71;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 
@@ -202,6 +211,8 @@ body {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 
@@ -277,4 +288,6 @@ body {
     color: var(--primary-text-color);
     font-size: 16px;
     line-height: 1.88;
+    margin-top: 0;
+    margin-bottom: 0;
 }
