--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,19 @@ body {
     color: var(--primary-text-color);
 }
 
+.container {
+    width: 1200px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    outline: 2px solid red;
+}
+
 .list {
     list-style: none;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .link {
@@ -50,6 +59,8 @@ body {
     font-weight: 700;
     margin-top: 0;
     margin-bottom: 0;
+
+    outline: 2px solid teal;
 }
 
 .invisible {
@@ -67,14 +78,6 @@ body {
     background: var(--secondary-accent-color);
     border-bottom: 1px solid var(--border-bottom-color);
 
-}
-
-.container {
-    width: 1200px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    outline: 2px solid red;
 }
 
 .logo {
@@ -121,11 +124,11 @@ body {
 
 .hero {
     background-color: var(--accent-background-color);
+    text-align: center;
 }
 
 .hero .main {
-    width: 696px;
-    height: 120px;
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -133,7 +136,10 @@ body {
     color: var(--secondary-accent-color);
     text-transform: uppercase; 
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 30px;
+
+    outline: 2px solid teal;
+  
 }
 
 .hero .button {
@@ -148,7 +154,6 @@ body {
     letter-spacing: 0.06em;
     padding: 10px 32px;
     min-width: 216px;
-    text-align: center;
     border: 0;
     cursor: pointer;
  }
@@ -162,10 +167,14 @@ body {
 
  /*=====ДРУГА СЕКЦІЯ ХАРАКТЕРИСТИКИ=====*/
 
+
+
+
 .characteristic .title {
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    margin-bottom: 10px;
 }
 
 .characteristic .point {
@@ -183,6 +192,7 @@ body {
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
+    margin-bottom: 50px;
 }
 
 
@@ -198,6 +208,7 @@ body {
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
+    margin-bottom: 50px;
 }
 
 .team .people {
@@ -205,6 +216,7 @@ body {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .team .texts {
@@ -282,6 +294,7 @@ body {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin-bottom: 4px;
 }
 
 .example .lists {
