--- a/css/styles.css
+++ b/css/styles.css
@@ -37,12 +37,17 @@ body {
 
 .list {
     list-style: none;
-    margin: 0;
-    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
 }
 
 .link {
     text-decoration: none;
+}
+
+.img {
+    display: block;
 }
 
 .characteristic .title,
@@ -74,8 +79,15 @@ body {
     padding-bottom: 25px;
 }
 
+.header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .header-nav {
-    
+    display: flex;
+    align-items: center;
     background: var(--secondary-accent-color);
     border-bottom: 1px solid var(--border-bottom-color);
     
@@ -83,6 +95,7 @@ body {
 }
 
 .logo {
+    margin-right: 94px;
     font-family: var(--accent-text-family);
     font-weight: 700;
     font-size: 26px;
@@ -99,15 +112,26 @@ body {
 
 .site-nav,
 .contacts {
+    display: flex;
+    align-items: center;
    
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
 }
 
+.site-nav-item:not(:last-child) {
+    margin-right: 50px;
+}
+
 .site-nav .link {
     color: var(--title-text-color);  
 }
+
+.contacts-item:not(:last-child) {
+    margin-right: 50px;
+}
+
 
 .contacts .contacts-link {
     color: inherit;
@@ -257,7 +281,8 @@ body {
     color: var(--secondary-accent-color);
 }
 
-.footer .address {  
+.footer .address { 
+    font-style: normal;
     line-height: 1.71;
 }
 
