--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ body {
 .essential .title,
 .team .title,
 .team .people,
-.example .subtitle {
+.example-list .subtitle {
     color: var(--title-text-color);
     font-weight: 700;
     margin-top: 0;
@@ -70,12 +70,16 @@ body {
 /* outline: 2px solid teal; */
 }
 
-.invisible {
-    opacity: 0;
-    margin-top: 0;
-    margin-bottom: 0;
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
 }
-
 
 /* section {
   outline: 3px solid blueviolet;
@@ -97,7 +101,7 @@ body {
 .header-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    
 }
 
 .header-nav {
@@ -138,6 +142,10 @@ body {
 
 .site-nav .link {
     color: var(--title-text-color);  
+}
+
+.contacts {
+    margin-left: auto;
 }
 
 .contacts-item:not(:last-child) {
@@ -216,7 +224,7 @@ body {
 
 
 .characteristic {
-    padding-top: 94px;
+    padding-bottom: 0;
 }
 
 .characteristic .distinction-list {
@@ -425,9 +433,18 @@ body {
 }
 
 .port-list-item {
-    flex-basis: calc((100% - 90px)/ 3); 
+    flex-basis: calc((100% - 90px)/ 3);
     margin-left: 30px;
     margin-top: 30px;
+}
+
+.port-wrapper {
+    border: 1px solid var(--border-div-color);
+    border-top: none;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
 .example-list .subtitle {
@@ -440,15 +457,6 @@ body {
 /* outline: 2px solid teal; */
 }
 
-.port-wrapper {
-    border: 1px solid var(--border-div-color);
-    border-top: none;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 24px;
-    padding-right: 24px;
-}
-
 .example-list .lists {
     color: var(--primary-text-color);
     font-size: 16px;
@@ -456,3 +464,4 @@ body {
     margin-top: 0;
     margin-bottom: 0;
 }
+
